# quyca

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  format.py  pyproject.toml  quyca_gen_json.py
.github/workflows/: pipeline.yml  python-publish.yml
app/: apidoc.json  conftest.py  main.py
app/api/: apidoc.py  router.py
app/core/: apidoc.py  config.py  debugger.py  logging.py
app/errors/: base.py
app/schemas/: affiliation.py  general.py  model.py  person.py  source.py  subject.py  token.py  user.py  work.py
app/services/: __init__.py  affiliation.py  base.py  crypt.py  jwt.py  person.py  source.py  user.py  work.py
app/tests/: __init__.py  test_affiliation.py  test_person.py
app/utils/: bars.py  cpi.py  encoder.py  flatten_json.py  hindex.py  maps.py  pies.py
config_db/: Dockerfile  create.sql
docker/: Dockerfile.dev  Dockerfile.test  docker-compose.dev.yml  docker-compose.test.yml
quyca/: app.py  config.py  conftest.py
quyca/actions/: bar_action.py  map_action.py  pie_action.py
quyca/api/: apidoc.py  router.py
quyca/constants/: external_urls.py  open_access_status.py
quyca/core/: apidoc.py  config.py  exceptions.py  logging.py
quyca/database/: mongo.py
quyca/domain/: helpers.py
quyca/enums/: external_urls.py  openalex_types.py
quyca/errors/: user.py
quyca/exceptions/: affiliation_calculations_exception.py  affiliation_exception.py  person_calculations_exception.py  person_exception.py  source_exception.py  work_exception.py
quyca/generators/: affiliation_generator.py  person_generator.py  source_generator.py  work_generator.py
quyca/infrastructure/: container.py  elasticsearch.py  mongo.py
quyca/models/: affiliation_calculations_model.py  affiliation_model.py  base_model.py  person_calculations_model.py  person_model.py  source_model.py  work_model.py
quyca/parsers/: work_parser.py
quyca/repositories/: affiliation_repository.py  calculations_repository.py  mongo.py  person_repository.py  plot_repository.py  work_repository.py
quyca/routes/: apidoc_router.py  etl_router.py  ping_router.py  router.py
quyca/schemas/: __init__.py  affiliation.py  general.py  person.py  source.py  subject.py  work.py
quyca/services/: __init__.py  affiliation.py  affiliation_plot_service.py  affiliation_service.py  api_expert_service.py  base.py  base_service.py  csv_service.py  etl_service.py  new_affiliation_service.py  new_person_service.py  new_source_service.py  new_work_service.py  other_work_service.py  patent_service.py  person.py  person_plot_service.py  (+6 more)
tests/: conftest.py  entry.py
(+479 files in other folders)
