[tool.poetry]
name = "quyca"
version = "0.1.0"
description = ""
authors = ["colav <colav@udea.edu.co>"]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
cpi = "^1.0.22"
currencyconverter = "^0.17.13"
pydantic-settings = "^2.2.1"
gunicorn = "^23.0.0"
pymongo = "^4.8.0"
pydantic = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
autoflake = "^2.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[tool.poetry.scripts]
format = "format:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
