[tool.poetry]
name = "quyca"
version = "0.1.0"
description = ""
authors = ["colav <grupocolav@udea.edu.co>"]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
cpi = "^1.0.22"
currencyconverter = "^0.17.13"
pydantic-settings = "^2.2.1"
gunicorn = "^23.0.0"
pymongo = "^4.8.0"
flask-jwt-extended = "^4.6.0"
google-api-python-client = "^2.181.0"
google-auth = "^2.40.0"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
openpyxl = "^3.1.2"
xlsxwriter = "^3.2.9" 
xhtml2pdf = "^0.2.17"
pydantic = "^2.9.1"
sentry-sdk = "^2.14.0"
flask-compress = "^1.17"
elasticsearch = "^8.17.0"
flask-limiter = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
autoflake = "^2.3.1"
mypy = "^1.11.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"